i18n日本語対応

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -188,6 +188,8 @@ ja:
       destroy: "この%{name}を削除"
       new: "%{name}の新規作成"
       back: "%{name}の一覧に戻る"
+      back_to_previous_page: "戻る"
+      post: "%{name}を投稿する"
       delete_confirm: よろしいですか？
       title_index: "%{name}の一覧"
       title_new: "%{name}の新規作成"
